--- a/bookworm-react/package.json
+++ b/bookworm-react/package.json
@@ -9,7 +9,9 @@
     "react-router-dom": "4.2.2",
     "react-scripts": "1.1.1",
     "semantic-ui-react": "^0.78.3",
-    "semantic-ui-css": "2.3.0"
+    "semantic-ui-css": "2.3.0",
+    "validator":"^9.4.1",
+    "prop-types": "^15.5.10"
   },
   "scripts": {
     "start": "react-scripts start",
