--- a/bookworm-react/package.json
+++ b/bookworm-react/package.json
@@ -3,15 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "prop-types": "^15.5.10",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
     "react-router": "4.2.0",
     "react-router-dom": "4.2.2",
     "react-scripts": "1.1.1",
-    "semantic-ui-react": "^0.78.3",
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-thunk": "^2.2.0",
     "semantic-ui-css": "2.3.0",
-    "validator":"^9.4.1",
-    "prop-types": "^15.5.10"
+    "semantic-ui-react": "^0.78.3",
+    "validator": "^9.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
