--- a/bookworm/bookwork-api/package.json
+++ b/bookworm/bookwork-api/package.json
@@ -10,6 +10,7 @@
     "babel-cli": "^6.26.0",
     "babel-eslint": "^7.2.3",
     "babel-preset-env": "^1.6.0",
+    "body-parser":"^1.18.2",
     "eslint": "^4.6.1",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-config-prettier": "^2.4.0",
